src/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>Intended as a Lookup object to define the Country Name, Country Code, Timezones, Telephonic Country Codes.</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>