src/objects/Country__c/fields/Daylight_Summer_Time__c.field-meta.xml
<CustomField>
    <fullName>Daylight_Summer_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daylight/Summer Time?</label>
    <type>Checkbox</type>
</CustomField>