src/objects/Country__c/fields/isEmbargoed__c.field-meta.xml
<CustomField>
    <fullName>isEmbargoed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEmbargoed</label>
    <type>Checkbox</type>
</CustomField>