src/objects/Country__c/fields/ISO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Country_Code__c</fullName>
    <description>Intended to contain the ISO two letter Country Code</description>
    <label>ISO_Country_Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>