src/objects/Country__c/fields/isSanctioned__c.field-meta.xml
<CustomField>
    <fullName>isSanctioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSanctioned</label>
    <type>Checkbox</type>
</CustomField>