src/objects/Country__c/fields/SFDC_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Country_Name__c</fullName>
    <label>SFDC_Country_Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>