src/objects/Country__c/fields/Telephonic_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Telephonic_Country_Code__c</fullName>
    <description>Intended to define the Telephonic Country Code</description>
    <label>Telephonic_Country_Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>