src/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Honeywell_Region_Name__c</columns>
    <columns>Honeywell_Sub_Region_Name__c</columns>
    <columns>ISO_Country_Code__c</columns>
    <columns>ISO_Country_Name__c</columns>
    <columns>Telephonic_Country_Code__c</columns>
    <columns>SFDC_Country_Name__c</columns>
    <columns>isEmbargoed__c</columns>
    <columns>isExport__c</columns>
    <columns>State_Prov_Code__c</columns>
    <columns>State_Prov_Desc__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>